--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Práctica DNS y hosting</title>
+</head>
+<body>
+  <h1>Práctica 1 – DNS y hosting</h1>
+  <h2>Alumno: TU NOMBRE</h2>
+  <p>Correo: <a href="mailto:tuemail@udc.es">tuemail@udc.es</a></p>
+  <p><a href="https://freedns.afraid.org">Free DNS</a></p>
+</body>
+</html>
 
