--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <h1>Práctica 1 – DNS y hosting</h1>
-  <h2>Alumno: TU NOMBRE</h2>
-  <p>Correo: <a href="mailto:tuemail@udc.es">tuemail@udc.es</a></p>
-  <p><a href="https://freedns.afraid.org">Free DNS</a></p>
+  <h2>Alumno: MIGUEL MATTHEWS LÓPEZ</h2>
+  <p>Correo: <a href="mailto:miguel.matthews@udc.es">tuemail@udc.es</a></p>
+ <p>Free DNS</p>
+<p><a href="https://freedns.afraid.org">Ir a FreeDNS</a></p>
 </body>
 </html>
 
