--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
   <h1>Práctica 1 – DNS y hosting</h1>
   <h2>Alumno: MIGUEL MATTHEWS LÓPEZ</h2>
-  <p>Correo: <a href="mailto:miguel.matthews@udc.es">tuemail@udc.es</a></p>
- <p>Free DNS</p>
-<p><a href="https://freedns.afraid.org">Ir a FreeDNS</a></p>
+  <p>Correo: <a href="mailto:miguel.matthews@udc.es">miguel.matthews@udc.es</a></p>
+<p><a href="https://freedns.afraid.org">Free DNS</a></p>
 </body>
 </html>
 
