--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Práctica 1 – DNS y hosting</h1>
   <h2>Alumno: MIGUEL MATTHEWS LÓPEZ</h2>
   <p>Correo: <a href="mailto:miguel.matthews@udc.es">miguel.matthews@udc.es</a></p>
-<p>Gracias, <a href="https://freedns.afraid.org">Free DNS</a></p>
+<p>Gracias <a href="https://freedns.afraid.org">Free DNS</a></p>
 </body>
 </html>
 
